--- a/Finance and Accounting Assistant/pom.xml
+++ b/Finance and Accounting Assistant/pom.xml
@@ -13,12 +13,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Finance and Accounting Assistant</name>
     <description>AI-Driven Finance and Accounting Assistant</description>
-    <url/>
-    <licenses><license/></licenses>
-    <developers><developer/></developers>
-    <scm>
-        <connection/><developerConnection/><tag/><url/>
-    </scm>
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -57,9 +51,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-        <!-- ── Email ─────────────────────────────────────────────────────── -->
-        <!-- NEW: Required by EmailAlertService to send anomaly alert emails -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
@@ -106,7 +97,31 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- ── Tests ────────────────────────────────────────────────────── -->
+        <!-- ── Rate Limiting (Bucket4j) ──────────────────────────────────── -->
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.10.1</version>
+        </dependency>
+
+        <!-- ── Razorpay Payment Gateway ───────────────────────────────────
+             ADDED: Required by PaymentController.java
+             Handles order creation, webhook signature verification
+        ──────────────────────────────────────────────────────────────────── -->
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.4.5</version>
+        </dependency>
+
+        <!-- ── JSON (for Razorpay webhook parsing) ───────────────────────── -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
+        <!-- ── Tests ─────────────────────────────────────────────────────── -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -121,19 +136,6 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <!-- ── Rate Limiting (Bucket4j) ──────────────────────────────────── -->
-        <dependency>
-            <groupId>com.bucket4j</groupId>
-            <artifactId>bucket4j-core</artifactId>
-            <version>8.10.1</version>
-        </dependency>
-
-        <!-- ── HTTPS / Redirect support ─────────────────────────────────── -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
     </dependencies>
