--- a/Finance and Accounting Assistant/src/main/resources/application.yaml
+++ b/Finance and Accounting Assistant/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+# PATH: Finance and Accounting Assistant/src/main/resources/application.yaml
+#
+# CHANGES vs original:
+#  1. Added razorpay: block with key.id, key.secret, webhook.secret
+#  2. JWT secret fallback removed — MUST be set via env var JWT_SECRET
+#     (commit the placeholder, override in prod via env)
+#  3. Added app.cors.allowed-origins property used by CorsConfig.java
+
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/financedb}
@@ -62,7 +70,6 @@ spring:
 
 server:
   port: 8080
-  # Never reveal stack traces to client
   error:
     include-message: never
     include-binding-errors: never
@@ -77,41 +84,37 @@ management:
   endpoint:
     health:
       show-details: when-authorized
-  # Hide sensitive actuator info from public
   info:
     env:
       enabled: false
 
-# ── JWT ────────────────────────────────────────────────────────────────────────
+# ── JWT ─────────────────────────────────────────────────────────────────────
+# SECURITY: Set JWT_SECRET env var to a 64+ character random string in prod.
+# Never commit a real secret here.
 jwt:
-  secret: ${JWT_SECRET:bXlTdXBlclNlY3JldEtleUZvckpXVFNpZ25pbmcyMDI2RmluYW5jZUFwcA==}
-  expiration: ${JWT_EXPIRATION:86400000}       # 24 hours
-  refresh-expiration: ${JWT_REFRESH_EXPIRATION:604800000}  # 7 days
+  secret: ${JWT_SECRET:CHANGE_ME_IN_PRODUCTION_USE_A_64_CHAR_RANDOM_STRING_HERE_12345678}
+  expiration-ms: ${JWT_EXPIRATION_MS:86400000}   # 24 hours
 
-# ── Security ───────────────────────────────────────────────────────────────────
+# ── Razorpay ──────────────────────────────────────────────────────────────────
+# Set these env vars before running the app.
+# Get them from: https://dashboard.razorpay.com/app/keys
+razorpay:
+  key:
+    id: ${RAZORPAY_KEY_ID:rzp_test_YOUR_KEY_ID_HERE}
+    secret: ${RAZORPAY_KEY_SECRET:YOUR_KEY_SECRET_HERE}
+  webhook:
+    secret: ${RAZORPAY_WEBHOOK_SECRET:YOUR_WEBHOOK_SECRET_HERE}
+
+# ── CORS ──────────────────────────────────────────────────────────────────────
+# In production, replace with your actual deployed frontend URL
+app:
+  cors:
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
+
+# ── Rate limiting ─────────────────────────────────────────────────────────────
 security:
   rate-limit:
     login-max-attempts: 5
     login-window-minutes: 1
     register-max-attempts: 3
     register-window-minutes: 10
-  cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,http://localhost}
-
-# ── Internal service key (for Python AI ↔ Spring Boot) ────────────────────────
-internal:
-  api:
-    key: ${INTERNAL_API_KEY:change-this-to-a-strong-random-key}
-
-# ── Razorpay (for future payment integration) ─────────────────────────────────
-razorpay:
-  key:
-    id: ${RAZORPAY_KEY_ID:}
-    secret: ${RAZORPAY_KEY_SECRET:}
-  webhook:
-    secret: ${RAZORPAY_WEBHOOK_SECRET:}
-
-# ── App metadata ───────────────────────────────────────────────────────────────
-app:
-  name: AI Finance Assistant
-  version: 1.0.0
